<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/secure_chat_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@color/lighterGray"
        android:elevation="8dp"
        android:visibility="gone"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_secure"
            android:contentDescription="@string/secure_chat" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/secure_chat"
            android:id="@+id/secure_chat_textview"
            android:layout_marginLeft="5dp" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/chat_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ScrollView
                android:id="@+id/chat_messages_scrollview"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <LinearLayout
                    android:id="@+id/chat_messages"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:orientation="vertical"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="20dp" />
            </ScrollView>

            <FrameLayout
                android:id="@+id/chat_input_wrapper_top_border"
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:background="@color/gray" />

            <FrameLayout
                android:id="@+id/chat_input_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="5dp"
                android:paddingHorizontal="4dp"
                android:layout_weight="0"
                android:background="@color/lighterGray"
                android:clipToPadding="false">

                <FrameLayout
                    android:id="@+id/chat_input_outline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:background="@drawable/corder_radius_4dp">

                    <FrameLayout
                        android:id="@+id/chat_input_border"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="1dp"
                        android:background="@drawable/corder_radius_4dp">

                        <LinearLayout
                            android:id="@+id/chat_input_inner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:paddingVertical="8dp"
                            android:paddingStart="8dp"
                            android:paddingEnd="16dp"
                            android:background="@drawable/corder_radius_4dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <ImageButton
                                    android:id="@+id/upload_files_button"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/ic_attachment"
                                    android:layout_gravity="center"
                                    android:background="@null"
                                    android:padding="8dp"
                                    android:paddingStart="12dp"
                                    app:tint="@drawable/fileupload_tint"
                                    tools:ignore="RtlSymmetry"
                                    android:visibility="gone"/>

                                <EditText
                                    android:id="@+id/chat_input_editText"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="8dp"
                                    android:layout_weight="1"
                                    android:background="@null"
                                    android:backgroundTint="@color/textColor"
                                    android:hint="@string/chat_input_placeholder"
                                    android:maxLength="110"
                                    android:minLines="1"
                                    android:paddingTop="4dp"
                                    android:paddingBottom="8dp"
                                    android:textColor="@color/textColor"
                                    android:textColorHint="@color/textColor" />

                                <RelativeLayout
                                    android:layout_width="70dp"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical"
                                    android:layout_marginStart="16dp"
                                    android:gravity="end">

                                    <FrameLayout
                                        android:id="@+id/chat_input_character_count_wrapper"
                                        android:layout_width="wrap_content"
                                        android:layout_height="0dp"
                                        android:layout_alignParentEnd="true"
                                        android:layout_alignParentTop="true"
                                        android:layout_alignBottom="@id/chat_input_submit_button"
                                        android:layout_marginBottom="8dp"
                                        android:layout_marginEnd="4dp"
                                        android:visibility="gone">
                                        <TextView
                                            android:id="@+id/chat_input_character_count_textview"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="@string/default_character_text"
                                            android:gravity="end"
                                            />
                                    </FrameLayout>

                                    <ImageButton
                                        android:id="@+id/chat_input_submit_button"
                                        android:layout_width="34dp"
                                        android:layout_height="34dp"
                                        android:layout_gravity="end"
                                        android:layout_alignParentEnd="true"
                                        android:layout_alignParentBottom="true"
                                        android:background="@drawable/ic_submit_text_icon"
                                        android:backgroundTint="@color/gray"
                                        android:contentDescription="@string/submit"/>

                                </RelativeLayout>

                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/file_uploads_wrapper"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:orientation="vertical">

                            </LinearLayout>

                        </LinearLayout>

                    </FrameLayout>

                </FrameLayout>

            </FrameLayout>

        </LinearLayout>

    </FrameLayout>

</LinearLayout>